# opencv_ws

./: .gitignore
BGS/: bg_sub.py  bg_sub2.py  energy.py
BGS/bg_sub/: CMakeLists.txt
BGS/bg_sub/src/: bg_sub.cpp
cascade/: background.txt  goods.txt  neg.txt  pallet.txt
cascade/code/: CMakeLists.txt  objectDetection.cpp
cascade/xml/: params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml
cascade/xml1/: stage0.xml  stage1.xml  stage2.xml  stage3.xml
imgs_similarity/: CMakeLists.txt
imgs_similarity/scripts/: image_compare_ssim.py
imgs_similarity/src/: base_hash.cpp  base_hist.cpp  base_orb.cpp
motionDetection/: CMakeLists.txt
motionDetection/BGDifference/: BGDifference.cpp  BGDifference.h  main.cpp
motionDetection/FramesDifference/: main1.cpp  main1copy.cpp  main2.cpp
motionDetection/include/: combineImages.hpp
test_vs/: CMakeLists.txt
test_vs/edge_detector/: CMakeLists.txt
test_vs/resource/: test.yaml
test_vs/scripts/: canny_detector.py  regionGrow.py  test.py  watershed.py
test_vs/src/: ROI.cpp  breakerRecognition.cpp  breakerRecognition.h  breaker_test.cpp  draw.cpp  edges_detected.cpp  erode.cpp  fileStorage.cpp  filter.cpp  hough.cpp  main.cpp  morphology.cpp  object_roi.py  pixel_operater.cpp  play_fast_slow.cpp  size_operation.cpp  threshold.cpp  video_roi.cpp  videocapture.cpp
